...
                    Text("Block and report")
                }
                Button(
                    onClick = onAccept,
                    modifier =
                        Modifier
                            .testTag("messageRequestAcceptButton"),
                    colors =
                        ButtonDefaults.buttonColors(
                            containerColor = IrisTheme.palette.accent,
                            contentColor = MaterialTheme.colorScheme.onPrimary,
                        ),
                ) {
...
